Add dotenv configuration and load environment variables
Add Drizzle ORM, Neon serverless driver, and migration scripts

Register the users API route in the Express application

Configure TypeScript path aliases for controllers, middlewares, database, and routes

Add custom middleware for request validation and auth‑token resolution

Create database initialization and schema files using Drizzle ORM

Implement user controller with signup, signin, delete, and update handlers

Add users route definitions with Zod validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,10 +44,10 @@
     // Import Aliases
     "baseUrl": "./src",
     "paths": {
-      // "@controllers/*": ["controllers/*"],
-      // "@middleware/*": ["middleware/*"],
-      // "@prisma/*": ["../prisma/*"],
-      // "@routes/*": ["routes/*"]
+      "@controllers/*": ["controllers/*"],
+      "@middlewares/*": ["middlewares/*"],
+      "@database/*": ["database/*"],
+      "@routes/*": ["routes/*"]
     }
   }
 }
